<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_tree"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projects.aaronmonteabaro.listenup.NewTree">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/newTreeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/treeButtonStyle"
                android:id="@+id/createAndListenButton"
                android:text="@string/createAndListenButton"
                android:background="#FF5722"
                />

            <TextView
                style="@style/treeButtonStyle"
                android:id="@+id/cancelButton"
                android:text="@string/cancelButton"
                android:background="#FF9800"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/upButton"
            android:src="@drawable/up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            />

    </LinearLayout>


</ScrollView>
